// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`idが設定できる 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -7,11 +7,11 @@
      \\"activeColumn\\": 0,
      \\"mode\\": \\"proposed\\",
    },
    \\"developerMode\\": true,
    \\"estimator\\": Object {
-     \\"id\\": null,
+     \\"id\\": 1234,
      \\"result\\": \\"\\",
    },
    \\"timer\\": Object {
      \\"id\\": null,
      \\"isActive\\": false,"
`;

exports[`resultを設定できる 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,11 +8,11 @@
      \\"mode\\": \\"proposed\\",
    },
    \\"developerMode\\": true,
    \\"estimator\\": Object {
      \\"id\\": null,
-     \\"result\\": \\"\\",
+     \\"result\\": \\"あらゆる現実を全て自分の方へねじ曲げたのだ\\",
    },
    \\"timer\\": Object {
      \\"id\\": null,
      \\"isActive\\": false,
      \\"scanSpeed\\": 500,"
`;
